fix(reader): fix navigation on tablet-ish size desktop view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1737,9 +1737,6 @@ div.selection-actions .selection-actions-inner {
 	.wrapper-all.tapped {
 		grid-template-columns: 100%;
 	}
-	.wrapper-all.tapped .main-sidebar {
-		display: none;
-	}
 }
 
 @media screen and (max-width: 450px) {
